refactor: restructure portfolio with project detail pages and new sections